[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/champions/Godotte/W/flames/flame.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/champions/Godotte/W/flames/fox_fire.gd" type="Script" id=2]
[ext_resource path="res://scripts/game/acquisition_area.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 435.0

[node name="FoxFire" type="Node2D"]
script = ExtResource( 2 )
flame_prefab = ExtResource( 1 )

[node name="Flame1" type="Node2D" parent="."]
position = Vector2( 82.5, 47.5 )

[node name="AcquisitionRadius" type="Area2D" parent="Flame1"]
input_pickable = false
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flame1/AcquisitionRadius"]
shape = SubResource( 1 )

[node name="Flame2" type="Node2D" parent="."]
position = Vector2( -82.5, 47.5 )

[node name="AcquisitionRadius" type="Area2D" parent="Flame2"]
input_pickable = false
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flame2/AcquisitionRadius"]
shape = SubResource( 1 )

[node name="Flame3" type="Node2D" parent="."]
position = Vector2( 0, -82.5 )

[node name="AcquisitionRadius" type="Area2D" parent="Flame3"]
input_pickable = false
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flame3/AcquisitionRadius"]
shape = SubResource( 1 )
